--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Concert+One&display=swap" rel="stylesheet">
     
     <link rel="stylesheet" href="./css/main.css">
-    <link rel="icon" href="data:;base64,iVBORw0KGgo=">
+    <link rel="icon" href="data:image/png;base64,iVBORw0KGgo=">
 
     <title>Kumpir samenstellen</title>
 </head>
